sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: not found: value debut
	debut=0
        ^AlgCocktailSort2:4: error: not found: value fin
	fin=getNombreValeurs()-2
        ^AlgCocktailSort2:8: error: not found: value debut
	for (i<-debut to fin) {
                ^AlgCocktailSort2:15: error: not found: value fin
	for (i<-fin to debut by -1) {
                ^