sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	debut=0
	fin=getNombreValeurs()-2
	var trié=true
	while (trié==true) {
		trié=false
	for (i<-debut to fin) {
		if (plusPetit(i:Int, i+1:Int)==false) {
			echange(i:Int, i+1:Int)
			trié=true
			fin-=1
		}
	}
	for (i<-fin to debut by -1) {
		if (plusPetit(i:Int, i+1:Int)==false) {
			echange(i:Int, i+1:Int)
			trié=true
			debut+=1
		}
	}
	
}
}
